welcome.lessons.welcome.bat.bool1.NearHundred.scala.error
nearHundred:2: error: 'case' expected but 'var' found.
	var c:Int = Math.abs(100 - n)
        ^nearHundred:3: error: '}' expected but ';' found.
	var d:Int = Math.abs(200 - n)
^nearHundred:4: error: '}' expected but 'case' found.
	case c<10 => true 
        ^nearHundred:5: error: illegal start of definition
	case d<10 => true
        ^nearHundred:6: error: illegal start of definition
	case _ => false
        ^nearHundred:8: error: eof expected but '}' found.
}
^